--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.3.1.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
+	id 'com.moowork.node' version '1.3.1'
 }
 
 group = 'bjdev'
@@ -14,11 +15,23 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
+}
+
+
+task webpack(type: NodeTask, dependsOn: 'npmInstall'){
+	def osName = System.getProperty("os.name").toLowerCase();
+	if (osName.contains("windows")) {
+ 		script = project.file('node_modules/webpack/bin/webpack.js')
+ 	} else {
+ 		script = project.file('node_modules/.bin/webpack')
 	}
 }
 
 test {
 	useJUnitPlatform()
 }
+
