[feat] Added material-ui/core package for using react simply.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "homepage": "https://github.com/ByoungJoonIm/Show-Itself",
   "dependencies": {
     "react": "~16.13.1",
-    "react-dom": "~16.13.1"
+    "react-dom": "~16.13.1",
+    "@material-ui/core": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
