--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
+    "rest": "^1.3.1",
     "@material-ui/core": "^4.0.0"
   },
   "devDependencies": {
