--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,9 +2,9 @@ name: build, webpack and push
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ master ]
   pull_request:
-    branches: [ dev ]
+    branches: [ master ]
 
 jobs:
   build:
