--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,12 @@ plugins {
 	id 'com.moowork.node' version '1.3.1'
 }
 
+import groovy.json.JsonSlurper
+def packageSlurper = new JsonSlurper()
+def packageJson = packageSlurper.parse file('package.json')
+version = packageJson.version
+
 group = 'bjdev'
-version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '8'
 
 repositories {
