--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build and Webpack with Gradle
-      run: ./gradlew webpack build
+      run: ./gradlew clean webpack build
     - name: Push
       run: |
         git config --local user.email "bj.max.lim@gmail.com"
