--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 	id 'com.moowork.node' version '1.3.1'
+	id 'org.asciidoctor.jvm.convert' version '3.1.0'
 }
+
 
 import groovy.json.JsonSlurper
 def packageSlurper = new JsonSlurper()
@@ -16,6 +18,19 @@ sourceCompatibility = '8'
 repositories {
 	mavenCentral()
 }
+
+asciidoctor {
+	baseDirFollowsSourceFile()
+	
+	outputDir file('build/docs')
+	
+	attributes \
+		'toc': 'left',
+		'toclevels': 4,
+		'icons': 'font',
+		'my-doc' : file('docs')
+}
+
 
 dependencies {
 	compile 'commons-io:commons-io:2.7'
@@ -40,6 +55,7 @@ task webpack(type: NodeTask, dependsOn: 'npmInstall'){
  		script = project.file('node_modules/.bin/webpack')
 	}
 }
+
 
 test {
 	useJUnitPlatform()
