[feat] docs.html will be used at build time.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ HELP.md
 !**/src/main/**/build/
 !**/src/test/**/build/
 build
+src/main/resources/templates/docs.html
 
 ### STS ###
 .apt_generated
