--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: "contains(github.event.head_commit.message, '[pre-release]') || contains(github.event.head_commit.message, '[pre-release-test]')"
+    if: "contains(github.event.head_commit.message, '[pre-release]') || contains(github.event.head_commit.message, '[build-test]')"
     
     steps:
     - uses: actions/checkout@v2
@@ -37,6 +37,7 @@ jobs:
       run: |
         git config --local user.email "bj.max.lim@gmail.com"
         git config --local user.name "byoungjoonim"
+        git pull
         git add built
         git commit -m "[build] built by github action on master branch"
         git push
