--- a/nginx/web.conf
+++ b/nginx/web.conf
@@ -9,6 +9,7 @@ server {
 
     location / {
         proxy_pass http://web:80/;
-	proxy_set_header Host $http_host;
+        proxy_set_header        Host                    $http_host;
+        proxy_set_header        X-Forwarded-Proto       https;
     }
 }
