[feat] WAS config was changed to serve https.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.data.rest.base-path=/api
 server.port=80
+server.use-forward-headers=true
+server.tomcat.protocol-header=x-forwarded-proto
+server.tomcat.protocol-header-https-value=https
+server.tomcat.remote-ip-header=x-forwarded-for
