[feat] Fixed nginx conf file.
Fixed nginx conf file to generate certificate by certbit.

--- a/nginx/web.conf
+++ b/nginx/web.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    server_name www.test.bjdev.site;
+    server_name www.bjdev.site bjdev.site;
 
     location /public/ {
         root /static/public;
