[feat] Updated web.conf by certbot

--- a/nginx/web.conf
+++ b/nginx/web.conf
@@ -1,7 +1,5 @@
 server {
-    listen 80;
-
-    server_name www.test.bjdev.site;
+    server_name www.bjdev.site bjdev.site;
 
     location /public/ {
         root /static/public;
@@ -12,4 +10,32 @@ server {
         proxy_set_header        Host                    $http_host;
         proxy_set_header        X-Forwarded-Proto       https;
     }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/www.bjdev.site/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/www.bjdev.site/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+
+}
+server {
+    if ($host = bjdev.site) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    if ($host = www.bjdev.site) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    server_name www.bjdev.site bjdev.site;
+
+    listen 80;
+    return 404; # managed by Certbot
+
+
+
+
 }
