--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,7 @@ asciidoctor {
 		'toc': 'left',
 		'toclevels': 4,
 		'icons': 'font',
-		'my-doc' : file('docs'),
-		'docs-images-dir': file('docs/images').absolutePath 
+		'my-doc' : file('docs')
 }
 
 
